--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,16 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Sunflower:wght@300;500;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Russo+One&display=swap");
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-@layer base {
-    html {
-        font-family: "Sunflower", sans-serif;
-    }
-    input[type="number"]::-webkit-inner-spin-button,
-    input[type="number"]::-webkit-outer-spin-button {
-        -webkit-appearance: none;
-        margin: 0;
-    }
+* {
+    margin: 0px;
 }
